# DirectX12-Level-Renderer

./: .gitignore  ReadMe.txt
DirectX12/: CMakeLists.txt  GameLevel.txt  LevelLoaderLog.txt  lvlData.h  main.cpp  renderer.h
DirectX12/Level1/: GameLevel.txt
DirectX12/Level2/: GameLevel.txt
DirectX12/Level2/Models/: BirchTree_2.mtl  BirchTree_3.mtl  BushBerries_1.h2b  BushBerries_1.mtl  BushBerries_2.mtl  Bush_1.h2b  Bush_1.mtl  Bush_2.mtl  CactusFlower_1.mtl  CactusFlowers_2.h2b  CactusFlowers_2.mtl  CactusFlowers_3.h2b  CactusFlowers_4.h2b  CactusFlowers_5.h2b  Cactus_1.mtl  Cactus_2.mtl  Cactus_4.mtl  Cactus_5.h2b  Cactus_5.mtl  Corn_1.h2b  Corn_2.mtl  Flowers.mtl  Grass.mtl  Grass_2.mtl  Grass_Short.h2b  Plant_1.h2b  Plant_2.mtl  Plant_3.h2b  Plant_4.h2b  Plant_4.mtl  Plant_5.h2b  Rock_1.h2b  Rock_1.mtl  Rock_3.mtl  Rock_4.h2b  Rock_5.mtl  Rock_6.mtl  Rock_7.h2b  Wheat.h2b  Wheat.mtl  (+3 more)
DirectX12/Level3/: GameLevel.txt
DirectX12/Level3/Models/: 4Story.h2b  4Story.mtl  4Story_Center.h2b  4Story_Center.mtl  Bag_Open.h2b  Bag_Open.mtl  Bags.h2b  Bags.mtl  Barrel.h2b  Barrel.mtl  Bell_Tower.h2b  Bell_Tower.mtl  Blacksmith.h2b  Blacksmith.mtl  Cleric.h2b  Cleric.mtl  Gazebo.h2b  Gazebo.mtl  Ground.h2b  Ground.mtl  House_1.h2b  House_1.mtl  House_2.h2b  House_2.mtl  House_3.h2b  House_3.mtl  House_4.h2b  House_4.mtl  Inn.h2b  Inn.mtl  MarketStand_1.h2b  MarketStand_1.mtl  MarketStand_2.h2b  Mill.h2b  (+14 more)
DirectX12/Models2/: BirchTree_1.h2b  BirchTree_1.mtl  BirchTree_2.h2b  BirchTree_3.h2b  BirchTree_4.h2b  BirchTree_4.mtl  BirchTree_5.h2b  BirchTree_5.mtl  BushBerries_2.h2b  Bush_2.h2b  CactusFlower_1.h2b  CactusFlowers_3.mtl  CactusFlowers_4.mtl  CactusFlowers_5.mtl  Cactus_1.h2b  Cactus_2.h2b  Cactus_3.h2b  Cactus_3.mtl  Cactus_4.h2b  Corn_1.mtl  Corn_2.h2b  Flowers.h2b  Grass.h2b  Grass_2.h2b  Grass_Short.mtl  Ground.mtl  Plant_1.mtl  Plant_2.h2b  Plant_3.mtl  Plant_5.mtl  Rock_2.h2b  Rock_2.mtl  Rock_3.h2b  Rock_4.mtl  Rock_5.h2b  Rock_6.h2b  Rock_7.mtl  TreeStump_Moss.h2b  TreeStump_Moss.mtl  Willow_1.h2b  (+4 more)
DirectX12/Shaders/: PixelShader.hlsl
(+13 files in other folders)
